# framework.telephony.libslp-tapi

./: CMakeLists.txt
include/: ITapiSim.h  TelMisc.h  TelSim.h  tapi_event.h
mobile/: CMakeLists.txt
mobile/src/: tapi_common.c
packaging/: libslp-tapi.spec
src/: tapi_call.c  tapi_common.c  tapi_modem.c  tapi_network.c  tapi_sim.c  tapi_sms.c
test_src/: CMakeLists.txt  call.c  main.c  menu.c  modem.c  network.c  phonebook.c  sat.c  sim.c  sms.c  sms.h  sms_util.c  sms_util.h  ss.c
wearable/: CMakeLists.txt  libslp-tapi.manifest
wearable/TC/: README.txt  _export_target_env.sh  config  gbs_setup.sh
wearable/TC/testcase/: Makefile  tslist  utc_call.c  utc_common.c  utc_gps.c  utc_modem.c  utc_network.c  utc_phonebook.c  utc_sap.c  utc_sat.c  utc_sim.c  utc_sms.c  (+3 more)
wearable/include/: ITapiCall.h  ITapiGps.h  ITapiModem.h  ITapiNetText.h  ITapiNetwork.h  ITapiPS.h  ITapiPhonebook.h  ITapiSat.h  ITapiSim.h  ITapiSs.h  SLP_TelephonyFW_PG.h  TapiUtility.h  TelCall.h  TelGps.h  TelNetwork.h  TelPower.h  TelSat.h  TelSatObj.h  TelSim.h  TelSms.h  TelSs.h  tapi_common.h  tapi_event.h  tapi_type.h
wearable/src/: common.h  tapi_call.c  tapi_common.c  tapi_gps.c  tapi_log.h  tapi_modem.c  tapi_network.c  tapi_phonebook.c  tapi_sap.c  tapi_sat.c  tapi_sim.c  tapi_sms.c  tapi_ss.c
wearable/test_src/: CMakeLists.txt  call.c  call.h  gps.c  gps.h  main.c  menu.c  menu.h  modem.c  modem.h  network.c  network.h  phonebook.c  phonebook.h  sat.c  sat.h  sim.c  sim.h  sms.c  sms.h  sms_util.c  sms_util.h  ss.c  ss.h
wearable/unit-test/: CMakeLists.txt  log.h  test-thread.c
